tests/derive_ref/fails/boxmethods.stderr
error: cannot derive `Ref` for a trait declaring methods with arbitrary receiver types
 --> $DIR/boxmethods.rs:7:18
  |
7 |     fn increment(self: Box<Self>);
  |                  ^^^^^^^^^^^^^^^
